New Dark look and feel add, and working with gradle. Also cleaned up gradle build file