@@ -5,27 +5,16 @@ plugins {
 
 application {
     mainClassName = "startup.Setup"
-    applicationDefaultJvmArgs = [" --add-exports=java.desktop/sun.swing=synthetica.base\n",
-                                         "   --add-exports=java.desktop/sun.swing.table=synthetica.base\n",
-                                         "   --add-exports=java.desktop/sun.swing.plaf.synth=synthetica.base\n",
-                                         "   --add-opens=java.desktop/javax.swing.plaf.synth=synthetica.base\n",
-                                         "   --add-opens=java.desktop/javax.swing.plaf.basic=synthetica.base\n",
-                                         "   --add-opens=java.desktop/javax.swing=synthetica.base\n",
-                                         "   --add-opens=java.desktop/javax.swing.tree=synthetica.base\n",
-                                         "   --add-opens=java.desktop/java.awt.event=synthetica.base\n",
-                                         "   --add-exports=java.desktop/sun.awt.shell=synthetica.base\n",
-                                         "   --add-exports=java.base/sun.security.action=synthetica.base\n", ]
 }
 
 dependencies {
     testImplementation 'junit:junit:4.13'
-    implementation 'javazoom:jlayer:1.0.1'
+    implementation 'com.formdev:flatlaf:0.33'
     implementation 'fr.delthas:javamp3:1.0.1'
 
+    //https://mvnrepository.com/artifact/com.formdev/flatlaf
+    //runtime group: 'com.formdev', name: 'flatlaf', version: '0.33'
     //'fr.delthas', name: 'javamp3', version: '1.0.1'
-    //implementation fileTree(dir: 'libs', include: ['*.jar'])
-    // https://mvnrepository.com/artifact/javazoom/jlayer
-    //compile group: 'javazoom', name: 'jlayer', version: '1.0.1'
 
 }
 
